ExternalPopupMenu should recreate its popup only if a SELECT subtree is updated

crbug.com/608140 happens because animation on a SELECT element causes
multiple didRecalcStyle calls, and ExternalPopupMenu::updateFromElement
recreates a popup by a HEAD element change.

This CL adds a |reason| argument to PopupMenu::updateFromElement. It is one of
BySelectionChange, ByStyleChange, and ByDOMCHange. ExternalPopupMenu doesn't
recreates its popup if the |reason| is ByStyleChange because ExternalPopupMenu
doesn't support styling.

BUG=608140

Review-Url: https://codereview.chromium.org/1970653003
Cr-Commit-Position: refs/heads/master@{#392965}

Former-commit-id: 1d5b6507ac2cbfdbb733cbefa1dbbce091b11a06