third_party/WebKit/Source/core/loader/EmptyClients.cpp
@@ -62,7 +62,7 @@ class EmptyPopupMenu : public PopupMenu {
 public:
     void show() override { }
     void hide() override { }
-    void updateFromElement() override { }
+    void updateFromElement(UpdateReason) override { }
     void disconnectClient() override { }
 };
 
